<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="?android:attr/windowBackground"
    android:fillViewport="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvLoginTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_title"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/etix_blue"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"/>

        <EditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:background="@drawable/bg_input"
            android:padding="12dp"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:background="@drawable/bg_input"
            android:padding="12dp"
            android:layout_marginBottom="24dp"/>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_login"
            style="@style/Shape"
            android:layout_marginBottom="12dp" />

        <TextView
            android:id="@+id/tvRegisterRedirect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_account_register"
            android:gravity="center"
            android:textColor="@color/etix_blue"
            android:textSize="14sp" />
    </LinearLayout>
</ScrollView>