<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_popup"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="16dp">

    <!-- Icône rouge -->
    <ImageView
        android:id="@+id/imageErrorIcon"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:src="@drawable/ic_error"
        android:contentDescription="@string/popup_error_title"
        android:layout_marginBottom="16dp" />

    <!-- Titre -->
    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_error_title"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@android:color/holo_red_dark"
        android:layout_marginBottom="8dp" />

    <!-- Message -->
    <TextView
        android:id="@+id/textMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_error_message"
        android:textSize="14sp"
        android:textColor="@android:color/black"
        android:gravity="center"
        android:layout_marginBottom="24dp" />

    <!-- Bouton OK -->
    <Button
        android:id="@+id/btnOk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        style="@style/Shape" />
</LinearLayout>