<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@android:color/transparent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_popup"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Icône verte -->
        <ImageView
            android:id="@+id/imageSuccessIcon"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/popup_success_title"
            android:src="@drawable/ic_success" />

        <!-- Titre -->
        <TextView
            android:id="@+id/textTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/popup_success_title"
            android:textColor="@color/etix_blue"
            android:textSize="18sp"
            android:textStyle="bold" />

        <!-- Message -->
        <TextView
            android:id="@+id/textMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:text="@string/popup_success_message"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <!-- Bouton OK -->
        <Button
            android:id="@+id/btnOk"
            style="@style/Shape"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ok" />
    </LinearLayout>
</FrameLayout>